--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ a {
     color: #000;
     cursor: url(../img/start/1300/cursor.png), pointer;
 }
+a:hover{
+    text-decoration: underline;
+    cursor: url(../img/start/1300/cursor.png), auto;
+}
 button{
     cursor: url(../img/start/1300/cursor.png), pointer;
 }
@@ -35,17 +39,29 @@ button{
     max-width: 1180px;
     margin: 30px auto;
 }
-
+.header__burger{
+    padding: 0 0 0 20px;
+    display: none;
+    border-left: 1px solid #e7e8e8;
+}
+.header__burger:hover{
+    cursor: url(../img/start/1300/cursor.png), pointer;
+    color: #f14a58;
+}
 .header__login-bag {
     display: flex;
     justify-content: space-between;
 }
 
-.header__login-bag__logo {
+.header__login-bag__logo,
+.header__login-bag__logo--mobile,
+.header__burger{
     margin: 0px;
     font: 1.75em OpenSans ,sans-serif;
 }
-
+.header__login-bag__logo--mobile{
+    display: none;
+}
 .header__login-bag__wrapper {
     display: flex;
     justify-content: space-between;
@@ -81,7 +97,11 @@ button{
     font-size: 0.875em;
     width: 80.5%;
 }
-
+.header__menu__list__element__link:hover,
+.header__menu__list__element__link:focus{
+    text-decoration: none;
+    color: #f14a58;
+}
 .header__menu__search {
     border-bottom: 2px solid #e5e5e5;
     width: 10.2%;
@@ -347,10 +367,6 @@ button{
     line-height: 3em;
     display: inline-block;
 }
-.footer__links__list__element:hover{
-    text-decoration: underline;
-    cursor: url(../img/start/1300/cursor.png), auto;
-}
 .footer__links__list,
 .footer__info__contact__list{
     width: 50%;
@@ -395,7 +411,8 @@ button{
     padding: 5px;
     margin-left: 5px;
 }
-.footer__share__list{
+.footer__share__list,
+.footer__share__list--mobile{
     width: 30%;
     display: flex;
     list-style: none;
@@ -405,6 +422,9 @@ button{
 .footer__share__list__element{
     margin-left: 35px;
 }
+.footer__share__list--mobile{
+    display: none;
+}
 .line__wrapper{
     background: url(../img/start/1300/line.png) center;
     max-width: 1440px;
@@ -412,7 +432,7 @@ button{
     margin: 0 auto;
 }
 
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1024px ){
     .body {
         max-width: 768px;
     }
@@ -455,10 +475,13 @@ button{
     }
     .bestOffer__content__total__new,
     .bestOffer__content__symbol{
-        font-size: 1.5em;
+        font-size: 2em;
+    }
+    .bestOffer__content__total__new{
+        margin: 90px 0 90px;
     }
     .bestOffer__content__total__old{
-        font-size: 1em;
+        font-size: 1.5em;
     }
     .bestOffer__content__total__bag-button{
         visibility: hidden;
@@ -471,12 +494,17 @@ button{
     .newArrivals__product__image__wrapper {
         transform: scale(.75);
     }
-    
+    .bestOffer__content__angle {
+        margin: 70px 0 0;
+    }
     .newArrivals__product__wrapper:last-child {
         display: none;
     }
     .newArrivals____button{
         width: 45%;
+    }
+    .newArrivals__content {
+        margin: 40px 0 60px;
     }
     .newArrivals__content__title{
         margin: 0 0 10px;
@@ -486,7 +514,7 @@ button{
     }
     .footer__info{
         max-width: 690px;
-        height: none;
+        height: auto;
         padding: 0 0 0 50px;
         background: none;
         border-top: 1px solid #e7e8e8;
@@ -525,5 +553,188 @@ button{
     }
     .footer__share__list__element{
         margin-left: 15px;
+    }
+}
+@media screen and (max-width: 767px){
+    .body{
+        max-width: 375px;
+    }
+    .header{
+        min-width: 335px;
+        align-items: center;
+        margin-top: 0;
+    }    
+    .header__login-bag{
+        height: 70px;
+        align-items: center;
+    }
+    .header__login-bag__bag__wrapper {
+        align-items: center;
+    }
+    .header__login-bag__logo,
+    .header__login-bag__login,
+    .header__menu,
+    .banners__content--caps{
+        display: none;
+    }
+    .header__burger{
+        display: flex;
+        height: 100%;
+        align-items: center;
+        font-size: 2em;
+    }
+    .header__login-bag__wrapper{
+        width: 70%;
+        justify-content: flex-end;
+    }
+    .header__login-bag__bag__wrapper{
+        width: 30%;
+    }
+    .header__menu--mobile{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        font-size: 1.75em;    
+        border-top: 1px solid #e7e8e8;
+    }
+    .header__menu__list{
+        flex-direction: column;
+        line-height: 2.5em;
+    }
+    .header__menu__search__input{
+        display: block;
+        font-size: 0.4em;
+    }
+    .header__menu__search {
+        border-bottom: 2px solid #e5e5e5;
+        width: 40%;
+        display: flex;
+    }
+    .header__login-bag__logo--mobile{
+        display: block;
+    }
+    .banners__content--nike{
+        width: 100%;
+    }
+    .bestOffer,
+    .newArrivals,
+    .footer__share{
+        max-width: 335px;
+    }
+    .bestOffer__heading,
+    .newArrivals__heading{
+        font-size: 2em;
+    }
+    .bestOffer__text{
+        line-height: 2em;
+    }
+    .bestOffer__content{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .bestOffer__content__wrapper{
+        width: 47%;
+    }
+    .bestOffer__content__symbol{
+        width: 6%;
+    }
+    .bestOffer__content__angle {
+        margin: 70px 0 30px;
+    }
+    .bestOffer__content__angle:last-child {
+        margin: 30px 0 0;
+    }
+    .bestOffer__content__image__wrapper,
+    .bestOffer__content__total__wrapper,
+    .newArrivals__product__image__wrapper {
+        transform: none;
+        width: 155px;
+        height: 230px;
+    }
+    .bestOffer__content__image__wrapper--first,
+    .bestOffer__content__image__wrapper--second {
+        background-size: 100%;
+    }
+    .bestOffer__content__total__bag-button{
+        display: none;
+    }
+    .bestOffer__bag-button,
+    .newArrivals____button {
+        margin: 0 auto;
+        width: 75%;
+    }
+    .bestOffer__content__total__new {
+        margin: 20px 0 90px;
+    }
+    .bestOffer__content__total__old{
+        top: 30px;
+        left: none;
+    }
+    .newArrivals__content{
+        justify-content: space-between;
+    }
+    .newArrivals__product__wrapper{
+        max-width: 45%;
+    }
+    .newArrivals__product__wrapper:nth-child(3n){
+        display: none;
+    }
+    .newArrivals__product__image{
+        max-width: 100%;
+    }
+    .newArrivals__product__image--filter{
+        width: inherit;
+        left: auto;
+    }
+    .footer__info{
+        padding: 0;
+        flex-wrap: wrap;
+    }
+    .footer__links,
+    .footer__info__contact{
+        width: 100%;
+    }
+    .footer__links__list,
+    .footer__info__contact__list{
+        padding-left: 10px;
+    }
+    .footer__info__contact__list{
+        margin-top: 40px;
+        padding: 25px 10px 25px;
+        border-top: 1px solid #e7e8e8;
+        border-bottom: 1px solid #e7e8e8;
+    }
+    .footer__info__contact__list:last-child{
+        margin-bottom: 0;
+    }
+    .footer__info__contact__list:last-child .footer__info__contact__list__heading,
+    .footer__info__contact__list__heading {
+        margin-top: 0;
+    }
+    .footer__info__contact__wrapper{
+        flex-direction: row;
+    }
+    .footer__info__contact__list:last-child{
+        border-left: 1px solid #e7e8e8;
+    }
+    .footer__info__social__link__wrapper{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .footer__share__list--mobile{
+        display: flex;
+        width: 80%;
+        justify-content: flex-start;
+        padding: 0;
+    }
+    .footer__share__list{
+        display: none;
+    }
+    .footer_share__wrapper{
+        width: 30%;
+    }
+    .footer_share__copyright{
+        width: 70%;
     }
 }
