--- a/css/item.css
+++ b/css/item.css
@@ -141,6 +141,9 @@
     }
 }
 @media screen and (max-width: 767px) {
+    .header{
+        margin-bottom: 0;
+    }
     .item{
         max-width: 335px;
     }
