--- a/css/item.css
+++ b/css/item.css
@@ -20,11 +20,34 @@
 .item__content__img{
     display: none;
 }
+.item__content__preview{
+    width: 590px;
+}
 .item__content__img--visible{
     display: block;
+    width: 100%;
 }
 .item__content__thumb__wrapper{
     display: flex;
+}
+.item__thumb{
+    position: relative;
+    cursor: url(../img/start/1300/cursor.png),pointer;
+    height: 130px;
+}
+.item__content__thumb{
+    max-height: 100%;
+}
+.item__content__selected{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.item__content__selected--visible{
+    display: block;
 }
 .item__content--info{
     padding-left: 5.9%;
@@ -111,11 +134,16 @@
         align-items: center;
         padding: 0;
     }
-    .item__content__img{
+    .item__content__preview{
         max-width: 520px;
     }
-    .item__content__thumb{
+    .item__thumb{
+        max-height: 113px;
         max-width: 170px;
+    }
+    .item__content__thumb{
+        max-width: 100%;
+        max-height: 100%;
     }
     .item__info{
         max-width: 80%;
@@ -166,11 +194,12 @@
         align-items: center;
         padding: 0;
     }
-    .item__content__img{
+    .item__content__preview{
         max-width: 100%;
     }
-    .item__content__thumb{
+    .item__thumb{
         max-width: 33.3%;
+        max-height: 74px;
     }
     .item__info{
         max-width: 100%;
