--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ button {
     border-left: 1px solid #e7e8e8;
 }
 
-.header__burger:hover {
+.header__burger:hover,
+.header__burger--close {
     cursor: url(../img/start/1300/cursor.png), pointer;
     color: #f14a58;
 }
