--- a/css/style.css
+++ b/css/style.css
@@ -297,8 +297,22 @@ button {
 
 .catalog__product__wrapper {
     margin-bottom: 70px;
+} 
+.catalog__product__wrapper:nth-child(2), 
+.catalog__product__wrapper:nth-child(3),
+.catalog__product__wrapper:nth-child(4),
+.catalog__product__wrapper:nth-child(5) {
+    order: 1;
 }
-
+.catalog__product__wrapper {
+    order: 4;
+}
+.catalog__button__wrapper {
+    order: 4;
+}
+.catalog__sale-info {
+    order: 2;
+}
 .bestOffer__content__price, 
 .newArrivals__content__price,
 .catalog__content__price {
@@ -834,11 +848,9 @@ button {
     }
     .catalog__button__wrapper {
         order: 4;
-    }
-    .catalog__product__wrapper:first-child, 
-    .catalog__product__wrapper:nth-child(2), 
-    .catalog__product__wrapper:nth-child(3) {
-        order: 1;
+    } 
+    .catalog__product__wrapper:nth-child(5) {
+        order: 4;
     }
     .catalog__sale-info {
         order: 2;
@@ -1042,7 +1054,7 @@ button {
     .catalog__product__wrapper {
         max-width: 45%;
     }
-    .catalog__product__wrapper:nth-child(3) {
+    .catalog__product__wrapper:nth-child(4) {
         order: 4;
     }
     .catalog__sale-info__heading {
